--- a/TaskTwo/view/frontend/templates/index.phtml
+++ b/TaskTwo/view/frontend/templates/index.phtml
@@ -6,4 +6,18 @@
     <h1><?= $block->getValueQtyAndHello('Quantity_config/hello_message/text_message') ?></h1>
 </div>
 
+<h2>template start</h2>
+
+
+
+<h2>template end</h2>
+
+
+<!--<script type="text/x-magento-init">
+   {
+       ".logo": {
+           "Amasty_TaskTwo/js/hider": { "selector" : ".page-footer" }
+       }
+   }
+</script>-->
 
