--- a/TaskTwo/view/frontend/templates/index.phtml
+++ b/TaskTwo/view/frontend/templates/index.phtml
@@ -2,6 +2,7 @@
 /** @var $block Amasty\TaskTwo\Block\Index */
 ?>
 
+<h1><?= $block->helloWorld('vasya') ?></h1>
 <div>
     <h1><?= $block->getValueQtyAndHello('Quantity_config/hello_message/text_message') ?></h1>
 </div>
